Mon Feb 23 07:58:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added 3581

        * tests/Portable_Interceptors/Bug_3582/client.cpp:
          Fixed include

Sun Feb 22 13:53:15 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * tests/Portable_Interceptors/Bug_3582/server.cpp:

          Fixed compiler warning on win platforms.

Sun Feb 22 10:13:07 UTC 2009  Marcel Smit <msmit@remedy.nl>

        * tests/Portable_Interceptors/Bug_3582/client.cpp
          Fixed compiler error on WinCE.

Fri Feb 20 23:17:07 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * tests/Portable_Interceptors/Bug_3582:

          Added test program for a bug about TRANSIENT exceptions being
          not intercepted when RTCORBA is used.

Fri Feb 20 11:36:50 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Value_Traits_T.h:

          Reverted the change from std::fill to ACE_OS::memset.
          Despite there was no problem with it on the scoreboard
          it was unsafe in case value_traits was instantiated
          for struct that has a non-POD type as its member.
          The rest of similar changes are equivalent to what we
          had before.

Thu Feb 19 10:59:31 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Generic_Sequence_T.h:

          Fixed a small mistake in the commit
          "Wed Feb 18 10:37:15 UTC 2009  Vladimir Zykov".

Wed Feb 18 18:57:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/orbconf.h:
          Removed commented out code

        * tao/Transport_Cache_Manager_T.cpp:
          Don't try to always purge 1 entry

        * tao/Bug_3558_Regression/client.cpp:
          Set the purging percentage to 100

        * tao/Transport_Cache_Manager/Bug_3558_Regression.cpp
          Fixed gnu warning

Wed Feb 18 10:37:15 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

          Fixed bug#3574 and bug#3473. This must improve performance